--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <div class="container">
       <div id="news"></div>
     </div>
-    <script src="js/index.js" type="module"></script>
+    <script src="js/main.js" type="module"></script>
   </body>
 </html>
