--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
       <div id="news"></div>
     </div>
     <script src="js/main.js" type="module"></script>
+    <script src="js/custom-comp.js" type="module"></script>
   </body>
 </html>
